# morpho-pairwise

./: .gitignore  CMakeLists.txt  README.md
doc/: #Spherocylinders.lyx#  Spherocylinders.lyx  Spherocylinders.lyx~
examples/: spherocylinderonsphere.morpho  spherocylinderpotential.morpho  twospherocylinders.morpho
lib/: pairwise.dylib
src/: CMakeLists.txt  Makefile  Makefile.linux  pairwise.c  pairwise.h
test/: gravity.morpho  gravityplushertz.morpho  hertzian.morpho  lennardjones.morpho  pairwisegravity.morpho  spherocylinder.morpho  spherocylindercases.morpho  testpairwise.morpho  testperiodic.morpho  testspherocylindergradient.morpho  thomson.morpho
test/spherocylinder/: spherocylinder.morpho
